--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Michel Wassing - Tech5",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,9 @@
   "homepage": "https://github.com/Michelwas97/Block-Tech-Michel#readme",
   "dependencies": {
     "camelcase": "^6.3.0",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "repeat-string": "^1.6.1"
   },
-  "keywords": []
+  "keywords": [],
+  "devDependencies": {}
 }
