--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   },
   "homepage": "https://github.com/Michelwas97/Block-Tech-Michel#readme",
   "dependencies": {
-    "camelcase": "^6.3.0",
-    "express": "^4.18.1",
-    "repeat-string": "^1.6.1"
+    "express": "^4.18.1"
   },
   "keywords": [],
   "devDependencies": {}
