--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
   },
   "homepage": "https://github.com/Michelwas97/Block-Tech-Michel#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3"
   },
   "keywords": [],
-  "devDependencies": {}
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
