--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -25,11 +26,10 @@
     "mongoose": "^6.3.3"
   },
   "keywords": [],
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "eslint": "^8.15.0",
+    "nodemon": "^2.0.16",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   }
 }
