--- a/package.json
+++ b/package.json
@@ -22,14 +22,11 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongodb": "^4.6.0",
-    "mongoose": "^6.3.3"
+    "mongodb": "^4.6.0"
   },
   "keywords": [],
   "devDependencies": {
     "eslint": "^8.15.0",
-    "nodemon": "^2.0.16",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.4"
+    "nodemon": "^2.0.16"
   }
 }
