--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/Michelwas97/Block-Tech-Michel#readme",
   "dependencies": {
+    "array-back": "^6.2.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongodb": "^4.6.0"
+    "mongodb": "^4.6.0",
+    "slug": "^5.3.0"
   },
   "keywords": [],
   "devDependencies": {
