--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "multer": "^1.4.4",
     "slug": "^5.3.0"
   },
   "keywords": [],
