--- a/.env example
+++ b/.env example
@@ -1,6 +1,6 @@
-DB_HOST=
-DB_USERNAME=
-DB_NAME=
-DB_PASS=
+DB_HOST= mongodb.hostname
+DB_USERNAME= mongodb.username
+DB_NAME= mongodb.dbname
+DB_PASS= mongodb.password
 
-PORT=
+PORT= localhost port number
