--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "mongoose": "^6.4.1",
     "multer": "^1.4.4",
     "slug": "^5.3.0"
   },
